--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "juejin-markdown-theme-default",
+  "name": "juejin-markdown-vue-pro",
   "private": true,
   "license": "MIT",
   "dependencies": {
